tests/errors/bundle/multi-len.fil
comp Foo[W]<'G:1>() -> () {
    bundle f[2][4]: ['G, 'G+1] 32;
    bundle g[5][W+1]: ['G, 'G+1] 32;

    f{0..2}{0..3} = g{0..5}{0..W+1};
}
